# probing-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml
config/prompts/: probe_generation.txt  task_analysis.txt  tool_alignment.txt
scripts/: bootstrap_templates.py  evaluate_strategies.py  run_pipeline.py  run_real_scenarios.py  test_live_agent.py
src/: pipeline.py
src/api/: app.py  schemas.py
src/llm/: client.py
src/models/: __init__.py  alignment.py  integration.py  probe.py  scoring.py  task.py
src/scoring/: birt.py  confidence.py  prior.py
src/stages/: probe_generation.py  probe_validation.py  task_analysis.py  tool_alignment.py
src/templates/: generator.py  library.py
src/tool_index/: indexer.py  retriever.py
tests/fixtures/: real_mcp_servers.json  real_queries.json  sample_mcp_servers.json  sample_queries.json
tests/integration/: test_pipeline.py  test_real_mcp.py
tests/unit/: test_api.py  test_models.py  test_probe_validation.py  test_scoring.py  test_task_analysis.py
